backend/complete_test_server.log
Traceback (most recent call last):
  File "/Users/yeya/FlutterProjects/ai-time/backend/api_server_with_docs.py", line 195, in <module>
    from api.v1.endpoints.case import cases, case_details, case_permissions
  File "/Users/yeya/FlutterProjects/ai-time/backend/api/v1/endpoints/case/case_permissions.py", line 6, in <module>
    from services.case.case_permission_service import CasePermissionService
  File "/Users/yeya/FlutterProjects/ai-time/backend/services/case/case_permission_service.py", line 6, in <module>
    from crud.user.crud_user_asset import CRUDUserAsset
  File "/Users/yeya/FlutterProjects/ai-time/backend/crud/user/crud_user_asset.py", line 79
    query = text("""
                 ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
Traceback (most recent call last):
  File "/Users/yeya/FlutterProjects/ai-time/backend/api_server_with_docs.py", line 380, in <module>
    from api.v1.endpoints.user import user_assets
  File "/Users/yeya/FlutterProjects/ai-time/backend/api/v1/endpoints/user/user_assets.py", line 15, in <module>
    from services.user.user_asset_service import UserAssetService
  File "/Users/yeya/FlutterProjects/ai-time/backend/services/user/user_asset_service.py", line 7, in <module>
    from crud.user.crud_user_asset import CRUDUserAsset
  File "/Users/yeya/FlutterProjects/ai-time/backend/crud/user/crud_user_asset.py", line 79
    query = text("""
                 ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
INFO:     Started server process [4412]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)

============================================================
ğŸš€ æ­£åœ¨å¯åŠ¨ AI Time Management API Server
============================================================
âœ… AIèŠå¤©æ¨¡å—åŠ è½½æˆåŠŸ
âœ… AIæ¨èæ¨¡å—åŠ è½½æˆåŠŸ
âš ï¸  æˆåŠŸæ¡ˆä¾‹æ¨¡å—åŠ è½½å¤±è´¥: invalid syntax. Perhaps you forgot a comma? (crud_user_asset.py, line 79)
âœ… æ¶ˆæ¯æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å­¦ä¹ æ–¹æ³•æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å¾½ç« æ¨¡å—åŠ è½½æˆåŠŸ
âœ… åŠ¨æ€æ¨¡å—åŠ è½½æˆåŠŸ
âœ… åŠ¨æ€æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å¯¼å¸ˆæ¨¡å—åŠ è½½æˆåŠŸ
âœ… æ—¶é—´è¡¨æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ç»Ÿè®¡æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ä»»åŠ¡æ¨¡å—åŠ è½½æˆåŠŸ
âš ï¸  ç”¨æˆ·èµ„äº§æ¨¡å—åŠ è½½å¤±è´¥: invalid syntax. Perhaps you forgot a comma? (crud_user_asset.py, line 79)
============================================================
ğŸ“š APIæ–‡æ¡£åœ°å€:
   - Swagger UI: http://localhost:8000/docs
   - ReDoc:      http://localhost:8000/redoc
   - OpenAPI:    http://localhost:8000/openapi.json
============================================================

INFO:     127.0.0.1:57771 - "GET /health HTTP/1.1" 200 OK
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [4412]
